@@ -1,3 +1,8 @@
+2009-03-18  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed a bug which would treat indices with Coordinate property
+	as patterns.
+
 2009-03-17  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Added primitive interface to Maxima in the form of the @maxima
